Changes for 1.7.5

 - [ZBX-1418] fixed errors in frontend install wizard (Aly)
 - [ZBX-1316] changed to standard trigger edit form (Aly)
 - [ZBX-1417] fixed permission check in configuration of actions (Aly)
 - [ZBX-1290] fixed maintenance permission check (Aly)

Changes for 1.7.4

 - [ZBX-1400] updated patches for DB (Aly)
 - [ZBX-1415] fixed problem displaying bar graphs (Aly)
 - [DEV-440] fixed vfs.fs.size[] to return data in bytes for all OS (Sasha)
 - [DEV-439] fixed vfs.fs.size[] to return available disk space for normal users (Sasha)
 - [ZBX-1246] fixed processing of results from items checks when character data must be interpreted like numeric data (Dmitry)
 - [ZBX-1408] fixed adding images for postgresql (Aly)
 - [ZBX-1410] fixed user profile update (Aly)
 - [ZBX-1371] shrinked API get results (Aly)
 - [ZBX-1411] fixed group and host selection in status of triggers (Aly)
 - [ZBX-1391] fixes for map permission checks (Aly)
 - [ZBX-1412] fixed graphs in web scenarios (Aly)
 - [ZBX-790] added protection of using special characters in user parameters of Zabbix Agent (Sasha)
 - [ZBX-1375] fixed graphs losing link with template after update (Vedmak)
 - [ZBX-137] added patch for Oracle (Alexei)
 - [ZBX-1372] applied patches for localization (Aly)
 - [ZBX-1378] allowed using months in age view (Aly)
 - [ZBX-1301] fixed discovery hosts view in dashboard (Aly)
 - [ZBX-1370] fixes in items copy (Aly)
 - [ZBX-1398] fixed advanced icons selection (Aly)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [ZBX-1380] improved performance viewing inventory host (vedmak)
 - [ZBX-1334] improved performance of template edit form (vedmak)
 - [DEV-438] added support of suffixes (K,M,G) in configuration parameters (Sasha)
 - [DEV-369] item check "log.regexp" was renamed to "logrt" to specify "log rotation" (Dmitry)
 - [DEV-339] added more internal checks zabbix[wcache,*] and abbix[rcache,*] (Sasha)